Accidental comment on scrollbar css caused a bug. Fixed

--- a/css/common/messages/messages-scrollbar.css
+++ b/css/common/messages/messages-scrollbar.css
@@ -13,7 +13,7 @@
 }
 
 .message-chat-msg-input::-webkit-scrollbar-thumb {
-  background-color: var(--placeholder); */
+  background-color: var(--placeholder);
 }
 
 .message-chat-area::-webkit-scrollbar {
